# TShemaXMLToC

./: .gitignore  CMakeLists.txt  README.md  converter.cpp  converter.h  main.cpp  paths.h.in  xmlutils.cpp  xmlutils.h
data/: 1.xml  2.xml
